workloads/monitoring/controllers/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loggers
  labels:
    app.kubernetes.io/component: loggers
    pod-security.kubernetes.io/enforce: privileged
